--- a/provision/roles/xcat_discovery_provision/tasks/initiate_monitor_status.yml
+++ b/provision/roles/xcat_discovery_provision/tasks/initiate_monitor_status.yml
@@ -14,6 +14,9 @@
 ---
 
 - name: Install development packages
+  when:
+    - control_plane_os in control_plane_os_redhat or
+      control_plane_os in control_plane_os_rocky
   ansible.builtin.package:
     name: "{{ psql_devel_packages }}"
     state: present
