--- a/utils/roles/control_plane_cleanup/vars/main.yml
+++ b/utils/roles/control_plane_cleanup/vars/main.yml
@@ -13,6 +13,11 @@
 # limitations under the License.
 ---
 
+# Usage: main.yml
+control_plane_os_redhat: "redhat"
+control_plane_os_rocky: "rocky"
+control_plane_os_ubuntu: "ubuntu"
+
 # Usage: clean_provision_setup.yml
 xcat_packages_path: "/opt/xcat/share/xcat/tools/go-xcat"
 xcat_cert_path: "/root/.xcat"
@@ -37,6 +42,7 @@ xcat_del_files:
   - /var/lib/dhcpd/dhcpd.leases~
   - /var/lib/dhcpd/dhcpd.leases.rpmsave
   - /var/lib/dhcpd
+  - /var/lib/dhcp
   - /var/lib/dhclient
   - /etc/dhcp/dhcpd.conf.rpmsave
   - /etc/dhcp/dhcpd.conf.xcatbak
@@ -48,11 +54,18 @@ xcat_download_files:
   - /root/xcat
   - /etc/yum.repos.d/xcat-core.repo
   - /etc/yum.repos.d/xcat-dep.repo
+  - /etc/apt/sources.list.d/xcat-core.list
+  - /etc/apt/sources.list.d/xcat-dep.list
 xcat_package: xCAT
 postgres_packages:
   - postgresql*
   - perl-DBD-Pg
-control_plane_os_redhat: "redhat"
+xcat_packages_ubuntu:
+  - xcat
+  - ipmitool-xcat
+  - postgresql*
+  - libdbd-pg-perl
+pg_dir_path_ubuntu: /var/lib/postgresql/
 
 # Usage:clean_telemetry_setup.yml
 exports_path: /etc/exports
