--- a/airgap/roles/airgap_validation/tasks/main.yml
+++ b/airgap/roles/airgap_validation/tasks/main.yml
@@ -13,11 +13,20 @@
 # limitations under the License.
 ---
 
-- name: Include provision configuration variables and validate them
-  ansible.builtin.include_tasks: validate_provision_config.yml
+- name: Set control_plane_os
+  ansible.builtin.set_fact:
+    control_plane_os: "{{ ansible_distribution | lower }}"
 
-- name: Verify if all pre-requisite conditions are met
-  ansible.builtin.include_tasks: check_prerequisites.yml
+- name: Airgap validation tasks for rhel/rocky
+  when:
+    - control_plane_os in control_plane_os_redhat or
+      control_plane_os in control_plane_os_rocky
+  block:
+    - name: Include provision configuration variables and validate them
+      ansible.builtin.include_tasks: validate_provision_config.yml
 
-- name: Validate control plane compatibility
-  ansible.builtin.include_tasks: validate_cp_compatibility.yml
+    - name: Verify if all pre-requisite conditions are met
+      ansible.builtin.include_tasks: check_prerequisites.yml
+
+    - name: Validate control plane compatibility
+      ansible.builtin.include_tasks: validate_cp_compatibility.yml
