--- a/airgap/roles/airgap_validation/vars/main.yml
+++ b/airgap/roles/airgap_validation/vars/main.yml
@@ -13,6 +13,10 @@
 # limitations under the License.
 ---
 
+# Usage: main.yml
+control_plane_os_redhat: "redhat"
+control_plane_os_rocky: "rocky"
+
 # Usage: include_provision_config.yml
 provision_config_filename: "{{ role_path }}/../../../input/provision_config.yml"
 provision_vault_path: "{{ role_path }}/../../../input/.provision_vault_key"
