--- a/provision/roles/provision_validation/tasks/validate_provision_vars.yml
+++ b/provision/roles/provision_validation/tasks/validate_provision_vars.yml
@@ -21,11 +21,12 @@
   ansible.builtin.fail:
     msg: "{{ input_provision_fail_msg }}"
   when:
-    - timezone | length < 1 or
-      language | length < 1 or
-      iso_file_path | length < 1 or
-      default_lease_time | length < 1 or
-      provision_os | length < 1
+    - timezone | default("", true) | length < 1 or
+      language | default("", true) | length < 1 or
+      iso_file_path | default("", true) | length < 1 or
+      default_lease_time | default("", true) | string | length < 1 or
+      provision_os | default("", true) | length < 1 or
+      provision_os_version | default("", true) | string | length < 1
 
 - name: Validate default lease time
   ansible.builtin.assert:
@@ -61,13 +62,25 @@
     msg: "{{ language_fail_msg }}"
   when: '"en-US" not in language'
 
-- name: Assert operating system
+- name: Assert provision_os for RHEL/Rocky control plane
   ansible.builtin.assert:
     that:
       - provision_os | lower == os_supported_rhel or
         provision_os | lower == os_supported_rocky
     success_msg: "{{ provision_os_success_msg }}"
     fail_msg: "{{ provision_os_fail_msg }}"
+  when:
+    - control_plane_os in control_plane_os_redhat or
+      control_plane_os in control_plane_os_rocky
+
+- name: Assert provision_os for ubuntu control plane
+  ansible.builtin.assert:
+    that:
+      - provision_os | lower == os_supported_ubuntu
+    success_msg: "{{ provision_os_success_msg }}"
+    fail_msg: "{{ provision_os_fail_msg }}"
+  when:
+    - control_plane_os in control_plane_os_ubuntu
 
 - name: Warning - Rocky version will be updated to latest
   ansible.builtin.pause:
@@ -95,74 +108,28 @@
     success_msg: "{{ iso_file_path_success_msg }}"
     fail_msg: "{{ iso_file_path_fail_msg }}"
 
-- name: Set supported_os_version_status to true
+- name: Set supported_os_version_status to true - rhel/rocky
   ansible.builtin.set_fact:
     supported_os_version_status: true
   with_items: "{{ supported_rhel_os_version }}"
-  when: provision_os_version | string in item
+  when: 
+    - provision_os_version | string  == item | string
+    - provision_os | lower == os_supported_rhel or
+      provision_os | lower == os_supported_rocky
+
+- name: Set supported_os_version_status to true - ubuntu
+  ansible.builtin.set_fact:
+    supported_os_version_status: true
+  with_items: "{{ supported_ubuntu_os_version }}"
+  when: 
+    - provision_os_version | string == item | string
+    - provision_os | lower == os_supported_ubuntu
 
 - name: Validate provision_os_version is supported
   ansible.builtin.fail:
     msg: "{{ provision_os_version_fail_msg }}"
   when: not supported_os_version_status
 
-- name: Warning - Please wait, This task will take few seconds
-  ansible.builtin.pause:
-    seconds: "{{ warning_wait_time }}"
-    prompt: "{{ dns_empty_warning_msg }}"
-  when:
-    - primary_dns | length < 1
-    - secondary_dns | length < 1
-
-- name: Validate primary_dns is not empty when secondary_dns provided
-  ansible.builtin.fail:
-    msg: "{{ primary_dns_empty_msg }}"
-  when:
-    - primary_dns | length < 1
-    - secondary_dns | length >1
-
-- name: Validate dns inputs
-  when: primary_dns | length > 1
-  block:
-    - name: Assert primary_dns when not empty
-      ansible.builtin.assert:
-        that:
-          - primary_dns | ansible.utils.ipv4
-        success_msg: "{{ primary_dns_success_msg }}"
-        fail_msg: "{{ primary_dns_fail_msg }}"
-
-    - name: Test reachability of primary_dns
-      ansible.builtin.command: ping -c3 {{ primary_dns }}
-      failed_when: false
-      changed_when: false
-      register: primary_dns_check
-
-    - name: Verify primary_dns is reachable
-      ansible.builtin.fail:
-        msg: "{{ primary_dns_not_reachable_msg }}"
-      when: ping_search_key in primary_dns_check.stdout
-
-    - name: Validate secondary_dns inputs
-      when: secondary_dns | length > 1
-      block:
-        - name: Assert secondary_dns when not empty
-          ansible.builtin.assert:
-            that:
-              - secondary_dns | ansible.utils.ipv4
-              - secondary_dns != primary_dns
-            success_msg: "{{ secondary_dns_success_msg }}"
-            fail_msg: "{{ secondary_dns_fail_msg }}"
-
-        - name: Test reachability of secondary_dns
-          ansible.builtin.command: ping -c3 {{ secondary_dns }}
-          failed_when: false
-          changed_when: false
-          register: secondary_dns_check
-
-        - name: Verify secondary_dns is reachable
-          ansible.builtin.debug:
-            msg: "{{ secondary_dns_not_reachable_msg }}"
-          when: ping_search_key in secondary_dns_check.stdout
 
 - name: Assert provision credentials
   block:
