--- a/provision/roles/xcat_prepare_cp/tasks/configure_xcat.yml
+++ b/provision/roles/xcat_prepare_cp/tasks/configure_xcat.yml
@@ -68,18 +68,9 @@
     chdef -t site excludenodes="control_plane"
   changed_when: true
 
-- name: Configure DHCP routing settings
-  when: primary_dns | length > 1
-  block:
-    - name: Configure site table
-      ansible.builtin.command: chdef -t site nameservers="{{ primary_dns }}"
-      changed_when: true
-      when: secondary_dns | length < 1
-
-    - name: Configure site table
-      ansible.builtin.command: chdef -t site nameservers="{{ primary_dns }}, {{ secondary_dns }}"
-      changed_when: true
-      when: secondary_dns | length > 1
+- name: Configure site table
+  ansible.builtin.command: chdef -t site nameservers="{{ pxe_nic_ip }}"
+  changed_when: true
 
 - name: Configure domain in site table
   ansible.builtin.command: chdef -t site domain="{{ domain_name }}"
@@ -89,39 +80,10 @@
   ansible.builtin.shell: >
     chtab key=system passwd.username=root passwd.password=`openssl passwd -1 {{ provision_password }}`
   changed_when: true
+  no_log: true
 
 - name: Configure host_network in networks table
   ansible.builtin.shell: >
     chdef -t network -o host_network net={{ pxe_nic_subnet }} mask={{ pxe_nic_netmask }} mgtifname={{ pxe_nic }}
     gateway={{ pxe_nic_ip }} dhcpserver={{ pxe_nic_ip }} tftpserver={{ pxe_nic_ip }} staticrange="{{ pxe_nic_start_range }}-{{ pxe_nic_end_range }}"
   changed_when: true
-
-- name: Setup postgres database
-  ansible.builtin.command: /opt/xcat/bin/pgsqlsetup -i -V
-  changed_when: true
-  no_log: true
-  environment:
-    XCATPGPW: "{{ postgresdb_password }}"
-
-- name: Start and enable xcat services
-  ansible.builtin.service:
-    name: "{{ item }}"
-    state: started
-    enabled: true
-  with_items: "{{ xcat_services }}"
-
-- name: Create conf directory for postgresql
-  ansible.builtin.file:
-    path: "{{ postgresql_conf_dir }}"
-    state: directory
-    mode: "{{ file_permission }}"
-
-- name: Copy postgresql.conf
-  ansible.builtin.copy:
-    src: "{{ postgresql_conf_src }}"
-    dest: "{{ postgresql_conf_dest }}"
-    mode: preserve
-
-- name: Reload systemd
-  ansible.builtin.systemd:
-    daemon_reload: true
