--- a/utils/roles/control_plane_cleanup/tasks/clean_provision_setup.yml
+++ b/utils/roles/control_plane_cleanup/tasks/clean_provision_setup.yml
@@ -74,11 +74,9 @@
         state: stopped
       when: ("running" in xcat_status.stdout)
       failed_when: false
-      no_log: true
 
     - name: Remove xCAT packages
       ansible.builtin.command: "{{ xcat_packages_path }} -y uninstall"
-      no_log: true
       failed_when: false
       changed_when: false
 
@@ -114,37 +112,50 @@
         - "{{ xcat_data_files_path }}"
         - "{{ xcat_del_files }}"
 
-    - name: Remove xCAT download files
-      ansible.builtin.file:
-        path: "{{ item }}"
-        state: absent
-      with_items: "{{ xcat_download_files }}"
-      tags: downloads
-
-    - name: Remove xCAT
+- name: Remove packages RHEL/Rocky
+  when:
+    - control_plane_os in control_plane_os_redhat or
+      control_plane_os in control_plane_os_rocky
+  block:
+    - name: Remove xCAT - RHEL/Rocky
       ansible.builtin.package:
         name: "{{ xcat_package }}"
         state: absent
       failed_when: false
-      no_log: true
-  tags: xcat
 
-- name: Uninstall postgres
-  block:
-    - name: Remove postgres
+    - name: Remove postgres - RHEL/Rocky
       ansible.builtin.package:
         name: "{{ postgres_packages }}"
         state: absent
       failed_when: false
-      no_log: true
 
-    - name: Remove postgres directory
+    - name: Remove postgres directory - RHEL/Rocky
       ansible.builtin.file:
-        path: "{{ item }}"
+        path: "{{ pg_dir_path }}"
         state: absent
-      with_items:
-        - "{{ pg_dir_path }}"
-  tags: postgres
+
+- name: Remove packages ubuntu
+  when:
+    - control_plane_os in control_plane_os_ubuntu
+  block:
+    - name: Remove xCAT package - ubuntu
+      ansible.builtin.apt:
+        name: "{{ xcat_packages_ubuntu }}"
+        state: absent
+        autoremove: true
+      failed_when: false
+
+    - name: Remove postgres directory - ubuntu
+      ansible.builtin.file:
+        path: "{{ pg_dir_path_ubuntu }}"
+        state: absent
+
+- name: Remove xCAT download files
+  ansible.builtin.file:
+    path: "{{ item }}"
+    state: absent
+  with_items: "{{ xcat_download_files }}"
+  tags: downloads
 
 - name: Create omnia folder in opt folder
   ansible.builtin.file:
@@ -154,6 +165,7 @@
 
 # Exit monitoring thread
 - name: Stop and disable monitoring service
+  tags: monitoring_thread
   block:
     - name: Stop omnia service, if started
       ansible.builtin.service:
@@ -164,7 +176,6 @@
       ansible.builtin.service:
         name: omnia.service
         enabled: false
-  tags: monitoring_thread
 
 - name: Remove epel-release
   ansible.builtin.command: dnf remove epel-release -y
