--- a/security/roles/ldap_server/vars/main.yml
+++ b/security/roles/ldap_server/vars/main.yml
@@ -24,6 +24,9 @@ hashing_python_file: "{{ role_path }}/files/generate_hash.py"
 
 directory_perm: "0700"
 
+ldaptoolbox_openldap_custom_schema_srcdir: "{{ role_path }}/files"
+ldaptoolbox_openldap_custom_schema_list: [custom.ldif]
+
 # OpenLDAP configuration
 ################################################################################
 
