--- a/security/roles/ldap_server/vars/main.yml
+++ b/security/roles/ldap_server/vars/main.yml
@@ -24,7 +24,7 @@ hashing_python_file: "{{ role_path }}/files/generate_hash.py"
 
 directory_perm: "0700"
 
-ldaptoolbox_openldap_custom_schema_srcdir: "{{ role_path }}/files"
+ldaptoolbox_openldap_custom_schema_srcdir: "{{ playbook_dir }}/files/ldaptoolbox.oldap/usr/local/openldap/etc/openldap/schema"
 ldaptoolbox_openldap_custom_schema_list: [custom.ldif]
 
 # OpenLDAP configuration
