LDAP server - prereq

--- a/security/roles/ldap_server/vars/main.yml
+++ b/security/roles/ldap_server/vars/main.yml
@@ -45,6 +45,6 @@ ldaptoolbox_openldap_custom_schema_list: [custom.ldif]
 # General OpenLDAP options
 ##########################
 
-ldaptoolbox_olcPasswordHash: "{SSHA}"
+ldaptoolbox_olcPasswordHash: "{SHA}"
 
 
