--- a/security/roles/ldap_server/tasks/ldap_prereq.yml
+++ b/security/roles/ldap_server/tasks/ldap_prereq.yml
@@ -47,7 +47,7 @@
 
 - name: Set variables for OpenLDAP config password
   ansible.builtin.set_fact:
-    ldaptoolbox_openldap_config_olcRootPW_hash: "{ARGON2}$argon2id$v=19$m=65536,t=2,p=1$eBzdIP+Zv/H/TmAw0xTXOg$JNQR9asBjEX5XYcTuqygvIY5S3iH43uqaqWQa9e0jNU"
+    ldaptoolbox_openldap_config_olcRootPW_hash: "{{ password_hash.stdout }}"
 
 - name: Genarate password hashes for OpenLDAP database
   delegate_to: localhost
@@ -56,7 +56,7 @@
 
 - name: Set variables for OpenLDAP database password
   ansible.builtin.set_fact:
-    ldaptoolbox_openldap_database_olcRootPW_hash: "{ARGON2}$argon2id$v=19$m=65536,t=2,p=1$22H7iUTEuPMmwYnLr07PjQ$257rNncoS6L/k4HUXmROU7p2SfinVjfjFeUz4pK8gEw"
+    ldaptoolbox_openldap_database_olcRootPW_hash: "{{ password_hash.stdout }}"
 
 - name: Genarate password hashes for OpenLDAP monitor
   delegate_to: localhost
@@ -65,5 +65,5 @@
 
 - name: Set variables for OpenLDAP monitor password
   ansible.builtin.set_fact:
-    ldaptoolbox_openldap_monitor_olcRootPW_hash: "{ARGON2}$argon2id$v=19$m=65536,t=2,p=1$f1aoIjM0CjWwGIyBAsjzyw$j+1bYxs+CYOPR2lXrvamB7yFzSX/nNMiVwIn7vwPRVw"
+    ldaptoolbox_openldap_monitor_olcRootPW_hash: "{{ password_hash.stdout }}"
 
