--- a/security/roles/ldap_server/vars/main.yml
+++ b/security/roles/ldap_server/vars/main.yml
@@ -19,6 +19,7 @@ ldaptoolbox_openldap_config_olcRootDN: "cn={{ hostvars['127.0.0.1']['openldap_co
 ldaptoolbox_openldap_database_olcRootDN: "cn={{ hostvars['127.0.0.1']['openldap_database_root_username'] }},{{ ldaptoolbox_openldap_suffix }}"
 ldaptoolbox_openldap_monitor_olcRootDN: "cn=monitor"
 ldaptoolbox_openldap_syncrepl_password_vault: ""
+ldaptoolbox_openldap_database_olcLimits: "dn.base=gidNumber=0+uidNumber=0,cn=peercred,cn=external,cn=auth size=unlimited  time=unlimited"
 ldaptoolbox_openldap_syncrepl: []
 python_version: python3.8
 hashing_python_file: "{{ role_path }}/files/generate_hash.py"
