--- a/provision/roles/xcat_discovery_provision/tasks/pre_requisites.yml
+++ b/provision/roles/xcat_discovery_provision/tasks/pre_requisites.yml
@@ -1,4 +1,4 @@
-# Copyright 2022 Dell Inc. or its subsidiaries. All Rights Reserved.
+# Copyright 2023 Dell Inc. or its subsidiaries. All Rights Reserved.
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -45,10 +45,22 @@
   ansible.builtin.set_fact:
     xcat_installation_status: true
   when:
+    - "'xcatd.service' in ansible_facts.services"
+    - "'postgresql.service' in ansible_facts.services"
+    - "'running' in ansible_facts.services['xcatd.service'].state"
+    - "'running' in ansible_facts.services['postgresql.service'].state"
+    - control_plane_os in control_plane_os_redhat or
+      control_plane_os in control_plane_os_rocky
+
+- name: Set xcat_installation_status to true for ubuntu
+  ansible.builtin.set_fact:
+    xcat_installation_status: true
+  when:
     - "'xcatd' in ansible_facts.services"
     - "'postgresql' in ansible_facts.services"
     - "'running' in ansible_facts.services['xcatd'].state"
     - "'running' in ansible_facts.services['postgresql'].state"
+    - control_plane_os in control_plane_os_ubuntu
 
 - name: Fail if xcat_installation_status is false
   ansible.builtin.fail:
@@ -85,8 +97,7 @@
   when:
     - groups['all'] is defined
     - (groups['all'] | length > 0)
-    - "'xcatd' in ansible_facts.services"
-    - "'running' in ansible_facts.services['xcatd'].state"
+    - xcat_installation_status
 
 - name: Warning - reprovision will be ignored
   ansible.builtin.pause:
