--- a/provision/roles/xcat_prepare_cp/tasks/pre_requisites.yml
+++ b/provision/roles/xcat_prepare_cp/tasks/pre_requisites.yml
@@ -1,4 +1,4 @@
-# Copyright 2022 Dell Inc. or its subsidiaries. All Rights Reserved.
+# Copyright 2023 Dell Inc. or its subsidiaries. All Rights Reserved.
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -68,7 +68,19 @@
   failed_when: false
   register: site_table_check
 
-- name: Set xcat_installation_status to true
+- name: Set xcat_installation_status to true for RHEL/Rocky
+  ansible.builtin.set_fact:
+    xcat_installation_status: true
+  when:
+    - "'xcatd.service' in ansible_facts.services"
+    - "'postgresql.service' in ansible_facts.services"
+    - "'running' in ansible_facts.services['xcatd.service'].state"
+    - "'running' in ansible_facts.services['postgresql.service'].state"
+    - "'#key,value' in site_table_check.stdout"
+    - control_plane_os in control_plane_os_redhat or
+      control_plane_os in control_plane_os_rocky
+
+- name: Set xcat_installation_status to true for ubuntu
   ansible.builtin.set_fact:
     xcat_installation_status: true
   when:
@@ -77,3 +89,4 @@
     - "'running' in ansible_facts.services['xcatd'].state"
     - "'running' in ansible_facts.services['postgresql'].state"
     - "'#key,value' in site_table_check.stdout"
+    - control_plane_os in control_plane_os_ubuntu
