--- a/security/roles/ldap_server/tasks/ldap_prereq.yml
+++ b/security/roles/ldap_server/tasks/ldap_prereq.yml
@@ -13,9 +13,9 @@
 # limitations under the License.
 ---
 
-- name: Set domain for OpenLDAP
-  ansible.builtin.set_fact:
-    ldaptoolbox_openldap_suffix: "{{ (hostvars['127.0.0.1']['domain_name'].split('.') | map('regex_replace', '^', 'dc=') | list) | join(',') }}"
+# - name: Set domain for OpenLDAP
+#   ansible.builtin.set_fact:
+#     ldaptoolbox_openldap_suffix: "{{ (hostvars['127.0.0.1']['domain_name'].split('.') | map('regex_replace', '^', 'dc=') | list) | join(',') }}"
 
 - name: Create default Certificates
   when: hostvars['127.0.0.1']['TLS_Cetificates_directory_path'] == ''
@@ -40,30 +40,30 @@
       ldaptoolbox_openldap_olcTLSCertificateFile: "{{ TLS_Cetificates_directory_path }}/ldapserver.crt"
       ldaptoolbox_openldap_olcTLSCertificateKeyFile: "{{ TLS_Cetificates_directory_path }}/ldapserver.key"
 
-- name: Genarate password hash for OpenLDAP config
-  delegate_to: localhost
-  ansible.builtin.command: "{{ python_version }} {{ hashing_python_file }} {{ hostvars['127.0.0.1']['openldap_config_root_password'] }}"
-  register: password_hash
+# - name: Genarate password hash for OpenLDAP config
+#   delegate_to: localhost
+#   ansible.builtin.command: "{{ python_version }} {{ hashing_python_file }} {{ hostvars['127.0.0.1']['openldap_config_root_password'] }}"
+#   register: password_hash
 
-- name: Set variables for OpenLDAP config password
-  ansible.builtin.set_fact:
-    ldaptoolbox_openldap_config_olcRootPW_hash: "{{ password_hash.stdout }}"
+# - name: Set variables for OpenLDAP config password
+#   ansible.builtin.set_fact:
+#     ldaptoolbox_openldap_config_olcRootPW_hash: "{{ password_hash.stdout }}"
 
-- name: Genarate password hashes for OpenLDAP database
-  delegate_to: localhost
-  ansible.builtin.command: "{{ python_version }} {{ hashing_python_file }} {{ hostvars['127.0.0.1']['openldap_database_root_password'] }}"
-  register: password_hash
+# - name: Genarate password hashes for OpenLDAP database
+#   delegate_to: localhost
+#   ansible.builtin.command: "{{ python_version }} {{ hashing_python_file }} {{ hostvars['127.0.0.1']['openldap_database_root_password'] }}"
+#   register: password_hash
 
-- name: Set variables for OpenLDAP database password
-  ansible.builtin.set_fact:
-    ldaptoolbox_openldap_database_olcRootPW_hash: "{{ password_hash.stdout }}"
+# - name: Set variables for OpenLDAP database password
+#   ansible.builtin.set_fact:
+#     ldaptoolbox_openldap_database_olcRootPW_hash: "{{ password_hash.stdout }}"
 
-- name: Genarate password hashes for OpenLDAP monitor
-  delegate_to: localhost
-  ansible.builtin.command: "{{ python_version }} {{ hashing_python_file }} {{ hostvars['127.0.0.1']['openldap_monitor_root_password'] }}"
-  register: password_hash
+# - name: Genarate password hashes for OpenLDAP monitor
+#   delegate_to: localhost
+#   ansible.builtin.command: "{{ python_version }} {{ hashing_python_file }} {{ hostvars['127.0.0.1']['openldap_monitor_root_password'] }}"
+#   register: password_hash
 
-- name: Set variables for OpenLDAP monitor password
-  ansible.builtin.set_fact:
-    ldaptoolbox_openldap_monitor_olcRootPW_hash: "{{ password_hash.stdout }}"
+# - name: Set variables for OpenLDAP monitor password
+#   ansible.builtin.set_fact:
+#     ldaptoolbox_openldap_monitor_olcRootPW_hash: "{{ password_hash.stdout }}"
 
