--- a/security/roles/security_validation/tasks/main.yml
+++ b/security/roles/security_validation/tasks/main.yml
@@ -41,8 +41,8 @@
   ansible.builtin.include_tasks: fetch_ldap_client_inputs.yml
   when: ldap_required
 
-- name: Encrypt security_config.yml
-  ansible.builtin.include_tasks: encrypt_security_config.yml
+# - name: Encrypt security_config.yml
+#   ansible.builtin.include_tasks: encrypt_security_config.yml
 
 - name: Check xcat installation status
   ansible.builtin.include_tasks: xcat_status_check.yml
