--- a/security/security.yml
+++ b/security/security.yml
@@ -26,12 +26,12 @@
 - name: Gather facts from all the nodes
   hosts: manager, compute, login
 
-- name: Validate repo file and subscription
-  hosts: manager, login, compute
-  gather_facts: false
-  roles:
-    - repo_validation
-  tags: freeipa, ldap
+#- name: Validate repo file and subscription
+#  hosts: manager, login, compute
+#  gather_facts: false
+#  roles:
+#    - repo_validation
+#  tags: freeipa, ldap
 
 - name: Add hosts to compute and login nodes
   hosts: manager, login, compute
@@ -83,20 +83,54 @@
   tags: test
 
 - name: Apply ldap server installation and config
+ hosts: manager
+ roles:
+   - ldap_server
+ tags: test
+
+- name: Apply ldap server installation and config
   remote_user: root
   hosts: manager
-  gather_facts: false
+  vars_files:
+    - /opt/omnia/ldap/manual/new/ansible-role-ldaptoolbox-openldap/tests/credentials-vault.yml
+  vars:
+    # Define suffix
+    - ldaptoolbox_openldap_suffix: "dc=omnia,dc=test"
+    # include extra schema
+    - ldaptoolbox_openldap_custom_schema_srcdir: "/opt/omnia/ldap/ansible-role-ldaptoolbox-openldap/tests/files/ldaptoolbox.oldap/usr/local/openldap/etc/openldap/schema"
+    - ldaptoolbox_openldap_custom_schema_list: [ custom.ldif ]
+    # define certificates (must be deployed before)
+    # - ldaptoolbox_openldap_olcTLSCACertificateFile: "{{ '/etc/pki/tls/certs/ldapserver.crt' if ansible_os_family == 'RedHat' else '/etc/ssl/certs/ca-certificates.crt' }}"
+    # - ldaptoolbox_openldap_olcTLSCertificateFile: "{{ '/etc/pki/tls/certs/ldapserver.crt' if ansible_os_family == 'RedHat' else '/etc/ssl/certs/ssl-cert-snakeoil.pem' }}"
+    # - ldaptoolbox_openldap_olcTLSCertificateKeyFile: "{{ '/etc/pki/tls/certs/ldapserver.key' if ansible_os_family == 'RedHat' else '/etc/ssl/private/ssl-cert-snakeoil.key' }}"
+    # Accounts and passwords
+    - ldaptoolbox_openldap_config_olcRootDN: cn=admin,cn=config
+    - ldaptoolbox_openldap_config_olcRootPW_hash: "{{ ldaptoolbox_openldap_config_olcRootPW_hash_vault }}"
+    - ldaptoolbox_openldap_database_olcRootDN: "cn=admin,{{ ldaptoolbox_openldap_suffix }}"
+    - ldaptoolbox_openldap_database_olcRootPW_hash: "{{ ldaptoolbox_openldap_database_olcRootPW_hash_vault }}"
+    - ldaptoolbox_openldap_monitor_olcRootDN: "cn=monitor"
+    - ldaptoolbox_openldap_monitor_olcRootPW_hash: "{{ ldaptoolbox_openldap_monitor_olcRootPW_hash_vault }}"
+    # No unlimitation
+    - ldaptoolbox_openldap_database_olcLimits:
+         - "dn.base=gidNumber=0+uidNumber=0,cn=peercred,cn=external,cn=auth size=unlimited  time=unlimited"
+    # ACLs from default role variables
+    # No replication
+    - ldaptoolbox_openldap_syncrepl: []
+    # overlay configuration from default role variables
+
   roles:
-    - ldap_server
+#    - ldap_server
+#    - /opt/omnia/ldap/manual/new/ansible-role-ldaptoolbox-openldap
     - /opt/omnia/ldap/ansible-role-ldaptoolbox-openldap
   tags: test
 
-- name: Apply ldap client installation and config
-  hosts: manager, compute, login
-  gather_facts: false
-  roles:
-    - ldap_client
-  tags: ldap
+
+#- name: Apply ldap client installation and config
+#  hosts: manager, compute, login
+#  gather_facts: false
+#  roles:
+#    - ldap_client
+#  tags: ldap
 
 - name: Configure secure login
   hosts: login
