--- a/security/roles/ldap_server/vars/main.yml
+++ b/security/roles/ldap_server/vars/main.yml
@@ -13,22 +13,22 @@
 # limitations under the License.
 ---
 
-ltb_ansible_role_path: "/opt/omnia/ldap/ansible-role-ldaptoolbox-openldap"
+# ltb_ansible_role_path: "/opt/omnia/ldap/ansible-role-ldaptoolbox-openldap"
 
-ldaptoolbox_openldap_config_olcRootDN: "cn={{ hostvars['127.0.0.1']['openldap_config_root_username'] }},cn=config"
-ldaptoolbox_openldap_database_olcRootDN: "cn={{ hostvars['127.0.0.1']['openldap_database_root_username'] }},{{ ldaptoolbox_openldap_suffix }}"
-ldaptoolbox_openldap_monitor_olcRootDN: "cn=monitor"
-ldaptoolbox_openldap_syncrepl_password_vault: ""
-ldaptoolbox_openldap_database_olcLimits:
-         - "dn.base=gidNumber=0+uidNumber=0,cn=peercred,cn=external,cn=auth size=unlimited  time=unlimited"
-ldaptoolbox_openldap_syncrepl: []
-python_version: python3.8
-hashing_python_file: "{{ role_path }}/files/generate_hash.py"
+# ldaptoolbox_openldap_config_olcRootDN: "cn={{ hostvars['127.0.0.1']['openldap_config_root_username'] }},cn=config"
+# ldaptoolbox_openldap_database_olcRootDN: "cn={{ hostvars['127.0.0.1']['openldap_database_root_username'] }},{{ ldaptoolbox_openldap_suffix }}"
+# ldaptoolbox_openldap_monitor_olcRootDN: "cn=monitor"
+# ldaptoolbox_openldap_syncrepl_password_vault: ""
+# ldaptoolbox_openldap_database_olcLimits:
+#          - "dn.base=gidNumber=0+uidNumber=0,cn=peercred,cn=external,cn=auth size=unlimited  time=unlimited"
+# ldaptoolbox_openldap_syncrepl: []
+# python_version: python3.8
+# hashing_python_file: "{{ role_path }}/files/generate_hash.py"
 
-directory_perm: "0700"
+# directory_perm: "0700"
 
-ldaptoolbox_openldap_custom_schema_srcdir: "{{ role_path }}/tests/files/ldaptoolbox.oldap/usr/local/openldap/etc/openldap/schema"
-ldaptoolbox_openldap_custom_schema_list: [custom.ldif]
+# ldaptoolbox_openldap_custom_schema_srcdir: "{{ role_path }}/tests/files/ldaptoolbox.oldap/usr/local/openldap/etc/openldap/schema"
+# ldaptoolbox_openldap_custom_schema_list: [custom.ldif]
 
 # OpenLDAP configuration
 ################################################################################
@@ -48,6 +48,6 @@ ldaptoolbox_openldap_custom_schema_list: [custom.ldif]
 # General OpenLDAP options
 ##########################
 
-ldaptoolbox_olcPasswordHash: "{SHA}"
+# ldaptoolbox_olcPasswordHash: "{SHA}"
 
 
