--- a/security/security.yml
+++ b/security/security.yml
@@ -91,8 +91,8 @@
 - name: Apply ldap server installation and config
   remote_user: root
   hosts: manager
-  vars_files:
-    - /opt/omnia/ldap/manual/new/ansible-role-ldaptoolbox-openldap/tests/credentials-vault.yml
+  # vars_files:
+  #   - /opt/omnia/ldap/manual/new/ansible-role-ldaptoolbox-openldap/tests/credentials-vault.yml
   vars:
     # Define suffix
     - ldaptoolbox_openldap_suffix: "dc=omnia,dc=test"
@@ -105,11 +105,11 @@
     - ldaptoolbox_openldap_olcTLSCertificateKeyFile: "{{ '/etc/pki/tls/certs/ldapserver.key' if ansible_os_family == 'RedHat' else '/etc/ssl/private/ssl-cert-snakeoil.key' }}"
     # Accounts and passwords
     - ldaptoolbox_openldap_config_olcRootDN: cn=admin,cn=config
-    - ldaptoolbox_openldap_config_olcRootPW_hash: "{{ ldaptoolbox_openldap_config_olcRootPW_hash_vault }}"
+    # - ldaptoolbox_openldap_config_olcRootPW_hash: "{{ ldaptoolbox_openldap_config_olcRootPW_hash_vault }}"
     - ldaptoolbox_openldap_database_olcRootDN: "cn=admin,{{ ldaptoolbox_openldap_suffix }}"
-    - ldaptoolbox_openldap_database_olcRootPW_hash: "{{ ldaptoolbox_openldap_database_olcRootPW_hash_vault }}"
+    # - ldaptoolbox_openldap_database_olcRootPW_hash: "{{ ldaptoolbox_openldap_database_olcRootPW_hash_vault }}"
     - ldaptoolbox_openldap_monitor_olcRootDN: "cn=monitor"
-    - ldaptoolbox_openldap_monitor_olcRootPW_hash: "{{ ldaptoolbox_openldap_monitor_olcRootPW_hash_vault }}"
+    # - ldaptoolbox_openldap_monitor_olcRootPW_hash: "{{ ldaptoolbox_openldap_monitor_olcRootPW_hash_vault }}"
     # No unlimitation
     - ldaptoolbox_openldap_database_olcLimits:
          - "dn.base=gidNumber=0+uidNumber=0,cn=peercred,cn=external,cn=auth size=unlimited  time=unlimited"
