--- a/security/roles/ldap_server/vars/main.yml
+++ b/security/roles/ldap_server/vars/main.yml
@@ -15,9 +15,9 @@
 
 # ltb_ansible_role_path: "/opt/omnia/ldap/ansible-role-ldaptoolbox-openldap"
 
-# ldaptoolbox_openldap_config_olcRootDN: "cn={{ hostvars['127.0.0.1']['openldap_config_root_username'] }},cn=config"
-# ldaptoolbox_openldap_database_olcRootDN: "cn={{ hostvars['127.0.0.1']['openldap_database_root_username'] }},{{ ldaptoolbox_openldap_suffix }}"
-# ldaptoolbox_openldap_monitor_olcRootDN: "cn=monitor"
+ldaptoolbox_openldap_config_olcRootDN: "cn={{ hostvars['127.0.0.1']['openldap_config_root_username'] }},cn=config"
+ldaptoolbox_openldap_database_olcRootDN: "cn={{ hostvars['127.0.0.1']['openldap_database_root_username'] }},{{ ldaptoolbox_openldap_suffix }}"
+ldaptoolbox_openldap_monitor_olcRootDN: "cn=monitor"
 # ldaptoolbox_openldap_syncrepl_password_vault: ""
 # ldaptoolbox_openldap_database_olcLimits:
 #          - "dn.base=gidNumber=0+uidNumber=0,cn=peercred,cn=external,cn=auth size=unlimited  time=unlimited"
@@ -30,24 +30,11 @@ hashing_python_file: "{{ role_path }}/files/generate_hash.py"
 # ldaptoolbox_openldap_custom_schema_srcdir: "{{ role_path }}/tests/files/ldaptoolbox.oldap/usr/local/openldap/etc/openldap/schema"
 # ldaptoolbox_openldap_custom_schema_list: [custom.ldif]
 
-# OpenLDAP configuration
-################################################################################
-
-# # Custom schemas
-# ldaptoolbox_openldap_custom_schema_srcdir: "../files/custom.ldif"
-# ldaptoolbox_openldap_custom_schema_list: [custom.ldif]
-# ldaptoolbox_openldap_schema_dir: /usr/local/openldap/etc/openldap/schema
-
-# Certificates
-# ldaptoolbox_openldap_olcTLSCACertificateFile: "{{ '' if ansible_os_family == 'RedHat' else '/etc/ssl/certs/ca-certificates.crt' }}"
-# ldaptoolbox_openldap_olcTLSCertificateFile: "{{ '' if ansible_os_family == 'RedHat' else '/etc/ssl/certs/ssl-cert-snakeoil.pem' }}"
-# ldaptoolbox_openldap_olcTLSCertificateKeyFile: "{{ '' if ansible_os_family == 'RedHat' else '/etc/ssl/private/ssl-cert-snakeoil.key' }}"
-
 
 ##########################
 # General OpenLDAP options
 ##########################
 
-# ldaptoolbox_olcPasswordHash: "{SHA}"
+ldaptoolbox_olcPasswordHash: "{SHA}"
 
 
